fix: scrollbar shows up when no-header, no-footer and no-border are true

--- a/ui/src/component/scroller.sass
+++ b/ui/src/component/scroller.sass
@@ -92,7 +92,6 @@ $footer-height-dense      : 30px
   &__body
     position: relative
     overflow: hidden
-    will-change: scroll-position
     padding: 0
     margin: 0
 
